# structconf

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust.yml
examples/: showcase.rs  vidify.rs
src/: lib.rs
structconf_derive/: Cargo.toml
structconf_derive/src/: attrs.rs  error.rs  lib.rs  opt.rs
tests/: attr_parsing.rs  basic.rs  basic_attributes.rs  compile.rs  compile_fails.rs  compile_tests.rs  custom.rs  default.rs  empty.rs  inverse_arg.rs  lib.rs  option.rs  parse_0.rs  parse_1.rs  parse_2.rs  parse_3.rs  trybuild.rs
tests/compile_fail/: conflicting_file.rs  conflicting_file.stderr  conflicting_help.stderr  conflicting_inverse.rs  conflicting_inverse.stderr  conflicting_long.rs  conflicting_long.stderr  conflicting_short.stderr  custom_norequisites.rs  custom_norequisites.stderr  invalid_type_enum.rs  invalid_type_enum.stderr  invalid_type_struct.rs  invalid_type_struct.stderr  inverse_nobool.rs  inverse_nobool.stderr  repeated_file.rs  repeated_file.stderr  repeated_long.rs  repeated_long.stderr  repeated_short.rs  repeated_short.stderr  repeated_short_auto.rs  repeated_short_auto.stderr
tests/compile_pass/: attr_parsing.rs  basic.rs  basic_attributes.rs  custom.rs  default.rs  empty.rs  inverse_arg.rs  option.rs
tests/error/: conflicting_conf_file.rs  conflicting_help.rs  conflicting_inverted.rs  conflicting_short.rs  custom_norequisites.rs  inverse_nobool.rs  inverted_nobool.rs
tests/fail/: conflicting_inverse.rs  conflicting_inverse.stderr  conflicting_long.stderr  conflicting_short.stderr  short_nochar.rs  short_nochar.stderr
tests/parse/: attr_parsing.rs  basic_attributes.rs  conf_file.rs  custom.rs  default.rs  inverse_arg.rs  inverted.rs  option.rs
tests/pass/: basic.rs  empty.rs  inverse_arg.rs  option.rs
