[package]
name = "structconf"
version = "0.3.2"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/structconf/"
description = "Combine clap and rust-ini into a single procedural macro"
homepage = "https://github.com/vidify/structconf"
repository = "https://github.com/vidify/structconf"
keywords = ["config", "configuration", "settings", "clap", "rust-ini"]
categories = ["config"]
license = "MIT"
readme = "README.md"

[dependencies]
clap = "2.33.1"
rust-ini = "0.15.3"
structconf_derive = { version = "0.3.2", path = "structconf_derive" }
thiserror = "1.0.20"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
dirs = "3.0.0"
strum = "0.19.1"
strum_macros = "0.19.1"
