[package]
name = "structconf"
version = "0.4.0"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/structconf/"
description = "Combine clap and rust-ini into a single procedural macro"
homepage = "https://github.com/marioortizmanero/structconf"
repository = "https://github.com/marioortizmanero/structconf"
keywords = ["config", "configuration", "settings", "clap", "rust-ini"]
categories = ["config"]
license = "MIT"
readme = "README.md"

[dependencies]
clap = "2.33.3"
rust-ini = "0.17.0"
structconf_derive = { version = "0.4.0", path = "structconf_derive" }
thiserror = "1.0.26"

[dev-dependencies]
trybuild = { version = "1.0.42", features = ["diff"] }
dirs = "3.0.2"
strum = "0.21.0"
strum_macros = "0.23.0"
