[package]
name = "structconf"
version = "0.5.0"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/structconf/"
description = "Combine clap and rust-ini into a single procedural macro"
homepage = "https://github.com/marioortizmanero/structconf"
repository = "https://github.com/marioortizmanero/structconf"
keywords = ["config", "configuration", "settings", "clap", "rust-ini"]
categories = ["config"]
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "3.0", features = ["cargo"] }
rust-ini = "0.18.0"
structconf_derive = { version = "0.5.0", path = "structconf_derive" }
thiserror = "1.0"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
dirs = "4.0"
strum = "0.23"
strum_macros = "0.23"
