[package]
name = "structconf_derive"
version = "0.4.0"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/structconf/"
description = "Derive macro for structconf"
homepage = "https://github.com/marioortizmanero/structconf"
repository = "https://github.com/marioortizmanero/structconf"
keywords = ["config", "configuration", "settings", "clap", "rust-ini"]
categories = ["config"]
license = "MIT"

[lib]
name = "structconf_derive"
proc-macro = true

[dependencies]
syn = { version = "1.0" }
quote = "1.0"
proc-macro2 = "1.0.18"
darling = "0.13.0"
